[package]
name = "create-github-app-token"
version = "2.0.1"
edition = "2021"
license = "MIT"
authors = ["Lucky3028 <lucky3028@users.noreply.github.com>"]
description = "This library makes easier to publish GitHub App token."
repository = "https://github.com/Lucky3028/create-github-app-token"
documentation = "https://docs.rs/create-github-app-token"
keywords = ["github", "token", "http"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
jsonwebtoken = "9.0"
serde = { version = "1.0.200", features = ["derive"], default-features=false }
surf = "2.3.2"
thiserror = "2.0.0"

[dev-dependencies]
test-case = "3.2.1"
